--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
             <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
             <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
-            <input type="text" placeholder="Final score" class="final-score">
-            <img src="dice-5.png" alt="Dice" class="dice" id="dice-1">
-            <img src="dice-5.png" alt="Dice" class="dice" id="dice-2">
+            <input type="text" placeholder="Final score" class="final-score"></input>
+            <img src="dice-5.png" alt="Dice" class="dice" id="dice-1"></img>
+            <img src="dice-5.png" alt="Dice" class="dice" id="dice-2"></img>
 
         </div>
 
